[package]
name = "rust-realtime-nursery"
version = "0.0.0"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
license = "CC0-1.0"
edition = "2018"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"

[lib]
bench = false # Don't disturb criterion command line parsing

[[bench]]
name = "std_allocation"
harness = false
